# AI智能体技术学习项目 - 现代Python项目配置
# ================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-python-ai-agents"
version = "1.0.0"
description = "AI智能体技术教学与实践项目"
authors = [
    {name = "山泽", email = "your.email@example.com"}
]
readme = "1_PROJECT_SUMMARY.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "ai", "agents", "reinforcement-learning", "deep-learning",
    "pytorch", "llm", "rag", "multi-agent", "mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib>=3.7.0",
    "typing-extensions>=4.5.0",
    "dataclasses-json>=0.5.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/learn_python"
Documentation = "https://github.com/yourusername/learn_python/blob/main/README.md"
Repository = "https://github.com/yourusername/learn_python"

[tool.setuptools]
packages = {find = {}}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除的目录
  \.git
  | \.venv
  | \.eggs
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
